@@ -1,3 +1,8 @@
+2020-02-22 Philipp Klaus Krause <pkk AT spth.de>
+
+	* index.php:
+	  Added News - SDCC 4.2.0 RC1.
+
 2021-03-22 Philipp Klaus Krause <pkk AT spth.de>
 
 	* links.php:
